src/BinDrivers/BinDrivers_DocumentStorageDriver.cxx
@@ -13,15 +13,16 @@
 // Alternatively, this file may be used under the terms of Open CASCADE
 // commercial license or contractual agreement.
 
+#include <BinDrivers_DocumentStorageDriver.hxx>
 
 #include <BinDrivers.hxx>
-#include <BinDrivers_DocumentStorageDriver.hxx>
 #include <BinLDrivers_DocumentSection.hxx>
 #include <BinMDF_ADriver.hxx>
 #include <BinMDF_ADriverTable.hxx>
 #include <BinMNaming_NamedShapeDriver.hxx>
 #include <CDM_MessageDriver.hxx>
 #include <Standard_ErrorHandler.hxx>
+#include <Standard_NotImplemented.hxx>
 #include <Standard_Type.hxx>
 #include <TCollection_AsciiString.hxx>
 #include <TNaming_NamedShape.hxx>
@@ -45,6 +46,51 @@ Handle(BinMDF_ADriverTable) BinDrivers_DocumentStorageDriver::AttributeDrivers
        (const Handle(CDM_MessageDriver)& theMessageDriver)
 {
   return BinDrivers::AttributeDrivers (theMessageDriver);
+}
+
+//=======================================================================
+//function : IsWithTriangles
+//purpose  :
+//=======================================================================
+Standard_Boolean BinDrivers_DocumentStorageDriver::IsWithTriangles() const
+{
+  if (myDrivers.IsNull())
+  {
+    return Standard_False;
+  }
+
+  Handle(BinMDF_ADriver) aDriver;
+  myDrivers->GetDriver (STANDARD_TYPE(TNaming_NamedShape), aDriver);
+  Handle(BinMNaming_NamedShapeDriver) aShapesDriver = Handle(BinMNaming_NamedShapeDriver)::DownCast(aDriver);
+  return !aShapesDriver.IsNull()
+       && aShapesDriver->IsWithTriangles();
+}
+
+//=======================================================================
+//function : SetWithTriangles
+//purpose  :
+//=======================================================================
+void BinDrivers_DocumentStorageDriver::SetWithTriangles (const Handle(CDM_MessageDriver)& theMessageDriver,
+                                                         const Standard_Boolean theWithTriangulation)
+{
+  if (myDrivers.IsNull())
+  {
+    myDrivers = AttributeDrivers (theMessageDriver);
+  }
+  if (myDrivers.IsNull())
+  {
+    return;
+  }
+
+  Handle(BinMDF_ADriver) aDriver;
+  myDrivers->GetDriver (STANDARD_TYPE(TNaming_NamedShape), aDriver);
+  Handle(BinMNaming_NamedShapeDriver) aShapesDriver = Handle(BinMNaming_NamedShapeDriver)::DownCast(aDriver);
+  if (aShapesDriver.IsNull())
+  {
+    Standard_NotImplemented::Raise("Internal Error - TNaming_NamedShape is not found!");
+  }
+
+  aShapesDriver->SetWithTriangles (theWithTriangulation);
 }
 
 //=======================================================================
